[gd_scene load_steps=12 format=3 uid="uid://b5m7rhfvsb8pn"]

[ext_resource type="Script" uid="uid://d11xhnvt42pqb" path="res://gd/Setting.gd" id="1_m26p3"]
[ext_resource type="Texture2D" uid="uid://dh2r44fvv6tlh" path="res://image/Screenshot 2025-03-27 003332.png" id="2_m7anh"]
[ext_resource type="FontFile" uid="uid://cmabas1nbtgcr" path="res://font/PressStart2P.ttf" id="3_0qk1i"]
[ext_resource type="AudioStream" uid="uid://xpore1cu3d3e" path="res://sound/Button Click - Sound Effect (mp3cut.net).mp3" id="5_kj1qo"]
[ext_resource type="FontFile" uid="uid://csvrf0btkmjt1" path="res://font/TA 8 bit.ttf" id="5_qw82l"]

[sub_resource type="LabelSettings" id="LabelSettings_8d1y4"]
font = ExtResource("5_qw82l")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oyecv"]
font = ExtResource("5_qw82l")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ug807"]
font = ExtResource("5_qw82l")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3unb1"]
font = ExtResource("5_qw82l")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cgyx7"]
font = ExtResource("5_qw82l")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mmclq"]
font = ExtResource("5_qw82l")
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -2.0
offset_right = -5.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m26p3")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(643.014, 374)
scale = Vector2(1.21284, 1.0419)
texture = ExtResource("2_m7anh")

[node name="Resolutions" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 326.0
offset_right = 394.0
offset_bottom = 394.0
theme_override_fonts/font = ExtResource("3_0qk1i")
theme_override_font_sizes/font_size = 45
text = "ปรับขนาดหน้าจอ"
label_settings = SubResource("LabelSettings_8d1y4")

[node name="Volume" type="Label" parent="."]
layout_mode = 2
offset_left = 108.0
offset_top = 170.0
offset_right = 661.0
offset_bottom = 238.0
theme_override_fonts/font = ExtResource("3_0qk1i")
theme_override_font_sizes/font_size = 45
text = "ระดับเสียง"
label_settings = SubResource("LabelSettings_oyecv")

[node name="Setting" type="Label" parent="."]
layout_mode = 0
offset_left = 574.0
offset_top = 56.0
offset_right = 934.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource("3_0qk1i")
theme_override_font_sizes/font_size = 45
text = "ตั้งค่า"
label_settings = SubResource("LabelSettings_ug807")

[node name="Mute" type="Label" parent="."]
layout_mode = 0
offset_left = 732.0
offset_top = 165.0
offset_right = 982.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("3_0qk1i")
theme_override_font_sizes/font_size = 45
text = "เปิด/ปิดเสียง"
label_settings = SubResource("LabelSettings_3unb1")

[node name="Mute2" type="Label" parent="."]
layout_mode = 0
offset_left = 728.0
offset_top = 308.0
offset_right = 1058.0
offset_bottom = 447.0
theme_override_fonts/font = ExtResource("3_0qk1i")
theme_override_font_sizes/font_size = 45
text = "เต็มจอ
"
label_settings = SubResource("LabelSettings_cgyx7")

[node name="Volume_Bar" type="HSlider" parent="."]
layout_mode = 2
offset_left = 105.0
offset_top = 220.0
offset_right = 649.0
offset_bottom = 236.0
scale = Vector2(1, 3)

[node name="Resolutions_Chioce" type="OptionButton" parent="."]
layout_mode = 2
offset_left = 416.0
offset_top = 334.0
offset_right = 649.0
offset_bottom = 382.0
item_count = 5
popup/item_0/text = "1920,1080"
popup/item_0/id = 0
popup/item_1/text = "1600, 900"
popup/item_1/id = 1
popup/item_2/text = "1440, 920"
popup/item_2/id = 2
popup/item_3/text = "1280, 720"
popup/item_3/id = 3
popup/item_4/text = "800, 600"
popup/item_4/id = 4

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 528.0
offset_right = 183.0
offset_bottom = 581.0

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = 18.0
offset_top = 8.0
offset_right = 125.0
offset_bottom = 49.0
text = "ย้อนกลับ"
label_settings = SubResource("LabelSettings_mmclq")

[node name="FullScreen" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 711.0
offset_top = 341.0
offset_right = 755.0
offset_bottom = 371.0
scale = Vector2(3, 3)

[node name="MuteCheck" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 207.0
offset_right = 756.0
offset_bottom = 231.0
scale = Vector2(3, 3)

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kj1qo")

[connection signal="value_changed" from="Volume_Bar" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="Resolutions_Chioce" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="MuteCheck" to="." method="_on_mute_check_toggled"]
